# article-explainer-agent

./: .env.example  CONTRIBUTING.md  Dockerfile.agent  Makefile  README.md  docker-compose.yml  mkdocs.yml  openapi.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build-and-push.yml
article_explainer_agent/: __init__.py  __main__.py  __version__.py  agent_config.json  agents.py  main.py  service.py
article_explainer_agent/skills/article-explain/: skill.yaml
docs/: index.md  modules.md
tests/: test_main.py
